crates/tremula/tests/snapshots/console_render__a_kill_caused_only_by_errors_renders_among_mixed_verdicts.snap
---
source: crates/tremula/tests/console_render.rs
expression: "render(&report, Some(&baseline))"
---
tremula run · 3 mutants · project: sample_project
baseline: 14 passed in 1.2s ✓ (collected=14)

  id        file             span      verdict        detail
  3b1f8c2d  src/calc.py      120–158   KILLED         2 errored
  3b1f8c2e  src/overlap.py   220–258   SURVIVED       14 passed
  3b1f8c2f  src/pkg/mod.py   320–358   RUNTIME_ERROR  backend error

score: 1/3 killed (0 timeout) · 1 survived · 1 excluded
note: SURVIVED = not killed by the existing suite (execution/coverage unverified)
exit 1 (survived present)
next: `tremula triage --model <model>` sorts the survivors; `tremula bundle` packages this run's evidence for somebody else
