crates/tremula/tests/snapshots/console_render__a_timeout_adds_a_warning_above_the_exit_line.snap
---
source: crates/tremula/tests/console_render.rs
expression: "render(&report, Some(&baseline))"
---
tremula run · 2 mutants · project: sample_project
baseline: 14 passed in 1.2s ✓ (collected=14)

  id        file             span      verdict    detail
  3b1f8c2d  src/calc.py      120–158   KILLED     3 failed
  3b1f8c2e  src/overlap.py   220–258   TIMEOUT    timed out

score: 2/2 killed (1 timeout) · 0 survived · 0 excluded
note: SURVIVED = not killed by the existing suite (execution/coverage unverified)
warning: 1 mutant(s) timed out — inspect before trusting the score
exit 0 (no survivors)
